--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,9 +23,7 @@
 					<div class="row">
 						<div class="col-xs-10 col-sm-6">
 							<h1 class="mb-10 heading">
-                Your
-                <span>Finances</span>
-                <span>Reinvented.</span>
+                FinTacToe.
               </h1>
 							<div class="subheading mb-20">
                 Latest financial news at the tip of your fingers
@@ -50,30 +48,30 @@
 		<div class="container mb-100 xs-mb-40">
 			<div class=row>
 				<div class="col-sm-5 col-md-4 col-md-offset-2 col-sm-offset-1">
-					<h1 class="mb-10 xs-mb-10 heading color-dark heading-bordered">Your App<br class=hidden-xs> Now</h1>
+					<h1 class="mb-10 xs-mb-10 heading color-dark heading-bordered">Analyse<br class=hidden-xs>Now.</h1>
 				</div>
 				<div class="col-sm-5 col-sm-offset-1">
-					<h2 class="w-300 color-dark mb-10 xs-mb-10">Lorem Ipsum Dolor Sit.</h2>
-					<p class="xs-mw">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+					<h2 class="w-300 color-dark mb-10 xs-mb-10">Market Outlook in Seconds.</h2>
+					<p class="xs-mw">Sentimental Analysis on Your Favourite Stocks' News.
 				</div>
 			</div>
 		</div>
-		<img src="img/v2/iphone6.min.png" alt class="mb-80 hidden-xs iphone-inline">
+		<img src="img/v2/bearbull.jpg" alt class="mb-80 hidden-xs iphone-inline" style="border-radius:20px;">
 		<div class=container>
 			<div class="row mb-90 xs-mb-0">
 				<div class="col-sm-1 col-sm-offset-2">
 					<i class="icon icon-check"></i>
 				</div>
 				<div class="col-sm-3">
-					<h3 class="mb-15">iOS Ready</h3>
-					<p class="smaller xs-mb-40 xs-mw">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+					<h3 class="mb-15">Isomorphic</h3>
+					<p class="smaller xs-mb-40 xs-mw">Client Side + Server Side JavaScript.
 				</div>
 				<div class="col-sm-1">
 					<i class="icon icon-calendar"></i>
 				</div>
 				<div class="col-sm-3">
-					<h3 class="mb-15">Up To Date</h3>
-					<p class="smaller xs-mb-40 xs-mw">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+					<h3 class="mb-15">Build Duration</h3>
+					<p class="smaller xs-mb-40 xs-mw">This was built in 1 week.
 				</div>
 			</div>
 			<div class=row>
@@ -81,31 +79,31 @@
 					<i class="icon icon-user"></i>
 				</div>
 				<div class="col-sm-3">
-					<h3 class="mb-15">Multiple Users</h3>
-					<p class="smaller xs-mb-40 xs-mw">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+					<h3 class="mb-15">User Friendly</h3>
+					<p class="smaller xs-mb-40 xs-mw">Smooth usage.
 				</div>
 				<div class="col-sm-1">
 					<i class="icon icon-clock"></i>
 				</div>
 				<div class="col-sm-3">
 					<h3 class="mb-15">On Time</h3>
-					<p class="smaller xs-mb-40 xs-mw">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+					<p class="smaller xs-mb-40 xs-mw">With one touch, you can get your news analysed.
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="level level-img-right">
 		<div class="container xs-mb-30">
-			<img class=img-right-sprite src="img/v2/iphone-bg-lg.min.png" alt>
+			<img class=img-right-sprite src="img/v2/134019917.jpg">
 			<div class="row mb-60 xs-mb-20">
 				<div class="col-sm-6 col-lg-offset-1 col-lg-5">
 					<h1 class="mb-20 xs-mb-10 heading color-dark heading-bordered xl-heading-outdent">Details</h1>
-					<h2 class="w-300 color-dark mb-10">All what you want in your phone</h2>
-					<p class=xs-mw>Now with Appi you have it on your fingertips.
+					<h2 class="w-300 color-dark mb-10">All what you want in one platform</h2>
+					<p class=xs-mw>Now with FinTacToe you have it on your fingertips.
 				</div>
 			</div>
 		<div class="visible-xs xs-mw xs-mb-40">
-			<img src="img/v2/iphone-mobile.min.png" alt>
+			<img src="img/v2/134019917.jpg" alt>
 		</div>
 			<div class="row mb-60 xs-mb-20">
 				<div class="col-sm-1 col-lg-offset-1">
@@ -113,7 +111,7 @@
 				</div>
 				<div class="col-sm-4 col-md-3">
 					<h3 class="mb-15">Worldwide</h3>
-					<p class="smaller xs-mw">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+					<p class="smaller xs-mw">Get news from major trading markets.
 				</div>
 			</div>
 			<div class="row mb-60 xs-mb-20">
@@ -122,7 +120,7 @@
 				</div>
 				<div class="col-sm-4 col-md-3">
 					<h3 class="mb-15">Privacy</h3>
-					<p class="smaller xs-mw">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+					<p class="smaller xs-mw">Your data is never shared.
 				</div>
 			</div>
 			<div class="row">
@@ -131,46 +129,24 @@
 				</div>
 				<div class="col-sm-4 col-md-3">
 					<h3 class="mb-15">Social Integration</h3>
-					<p class="smaller xs-mw">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+					<p class="smaller xs-mw">Share your data with your friends.
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="level level-outro text-center">
-		<div class=container>
-			<form class=contact method=get action="/" accept-charset="UTF-8">
-				<div class="h2 mb-20">Available on the <br class=visible-xs-block> App Store</div>
-				<p class="mb-35">Enter your phone number and we’ll send a link to your iPhone
-				<div class="btn-append dropdown-prepend">
-					<div class=dropdown>
-						<button class="btn btn-default dropdown-toggle" type="button" id="f1" data-toggle="dropdown" aria-expanded="true">
-						<span id=option-value-f1>US (+1)</span>
-							<span class="caret"></span>
-						</button>
-						<ul class="dropdown-menu" data-displaytarget="#option-value-f1" data-inputtarget=".f1-target" role="menu" aria-labelledby="f1">
-							<li role="presentation" data-placeholder="US ( +1)" data-value="1" class=disabled>US ( +1)</li>
-						</ul>
-					</div>
-					<!-- actual select here -->
-					<select name="country-code" class="sr-only f1-target countryCode">
-						<option selected value="1">US (+1)</option>
-					</select>
-					<input type=tel class="text phoneNumber" name="tel" placeholder="Phone number" required>
-					<input type=submit class="submit appended" value=submit>
-				</div>
-			</form>
-		</div>
+		<!-- to fill in if got time -->
 	</div>
 	<div class="footer text-center">
   	<p class="fmenu">
-  		<a href="index.html">HOME</a> | <a href="about.html">ABOUT</a>
+  		<!-- <a href="index.html">HOME</a> | <a href="about.html">ABOUT</a> -->
   	</p>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script> -->
 	<script src="js/bootstrap.min.js"></script>
-	<!-- <script src="js/dropdown.js"></script>
+	<script src="js/dropdown.js"></script>
 	<script src="js/modal.js"></script>
-	<script src="js/main.js"></script> -->
+	<script src="js/main.js"></script>
 </body>
 </html>
