--- a/views/ocr.ejs
+++ b/views/ocr.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+  <link rel="stylesheet" href="css/dashboard.css">
 </head>
   <body>
     <nav class="navbar navbar-inverse visible-xs">
@@ -22,7 +22,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="#">Dashboard</a></li>
+            <li><a href="#">Talk Code</a></li>
             <li class="active"><a href="#">OCR</a></li>
             <li><a href="#">Gender</a></li>
             <li><a href="#">Geo</a></li>
@@ -36,9 +36,9 @@
         <div class="col-sm-3 sidenav hidden-xs">
           <h2>Logo</h2>
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="#section1">Dashboard</a></li>
-            <li><a href="#section2">Age</a></li>
-            <li><a href="#section3">Gender</a></li>
+            <li><a href="/dashboard">Talk Code</a></li>
+            <li class="active"><a href="/ocr">OCR</a></li>
+            <li><a href="/glass">Glass</a></li>
             <li><a href="#section3">Geo</a></li>
           </ul><br>
         </div>
