--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html class=no-js>
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="BlackTie Free Bootstrap Theme">
+	<meta name="description" content="FinTacToe">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>FinTacToe</title>
@@ -26,16 +26,16 @@
                 FinTacToe.
               </h1>
 							<div class="subheading mb-20">
-                Latest financial news at the tip of your fingers
+                Create While You Speak
                 <br class=hidden-xs>blended with top notch artificial intelligence.
               </div>
 						</div>
 					</div>
 					<div>
-						<a class="btn btn-prepend btn-launch-video" href="#">
-							<i class="prepended icon-append-play"></i>Watch Demo
+						<a class="btn btn-prepend btn-launch-video" href="/register">
+							<i class="prepended icon-append-play"></i>Register
 						</a>
-						<a class="btn btn-prepend" href="#">
+						<a class="btn btn-prepend" href="/login">
 							<i class="prepended icon-append-iphone"></i>Login
 						</a>
 					</div>
@@ -48,11 +48,11 @@
 		<div class="container mb-100 xs-mb-40">
 			<div class=row>
 				<div class="col-sm-5 col-md-4 col-md-offset-2 col-sm-offset-1">
-					<h1 class="mb-10 xs-mb-10 heading color-dark heading-bordered">Analyse<br class=hidden-xs>Now.</h1>
+					<h1 class="mb-10 xs-mb-10 heading color-dark heading-bordered">Talk<br class=hidden-xs>Now.</h1>
 				</div>
 				<div class="col-sm-5 col-sm-offset-1">
-					<h2 class="w-300 color-dark mb-10 xs-mb-10">Market Outlook in Seconds.</h2>
-					<p class="xs-mw">Sentimental Analysis on Your Favourite Stocks' News.
+					<h2 class="w-300 color-dark mb-10 xs-mb-10">Artifical Power in Seconds.</h2>
+					<p class="xs-mw">Free Trial.
 				</div>
 			</div>
 		</div>
