--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>FinTacToe</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -19,7 +19,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Logo</a>
+        <a class="navbar-brand" href="#">FinTacToe</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
@@ -35,7 +35,7 @@
   <div class="container-fluid">
     <div class="row content">
       <div class="col-sm-3 sidenav hidden-xs">
-        <h2>Logo</h2>
+        <h2>FinTacToe</h2>
         <ul class="nav nav-pills nav-stacked">
           <li class="active"><a href="#section1">Talk Code</a></li>
           <li><a href="/ocr">OCR</a></li>
@@ -52,16 +52,28 @@
 
         <div class="row">
           <div class="col-sm-12">
+            <div class="well well-lg">
+              <div class="col-xs-8">
+                <input id="input" type="text" class="form-control">
+              </div>
+               <button id="rec" class="btn btn-success">Speak</button>
+            </div>
             <div class="well">
-              <input id="input" type="text"> <button id="rec">Speak</button>
-              <br>Response<br> <textarea id="response" cols="40" rows="20"></textarea>
+              <h4>AI Playground</h4>
               <div id="testarea"></div>
             </div>
+            <div class="well">
+              <br>Response<br> <textarea id="response" cols="40" rows="20"></textarea>
+              <button id="showjson" type="button" name="button" class="btn btn-warning">Show JSON</button>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
           </div>
         </div>
       </div>
     </div>
   </div>
-
   </body>
 </html>
