--- a/views/ocr.ejs
+++ b/views/ocr.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="stylesheet" href="css/ocr.css">
 </head>
   <body>
     <nav class="navbar navbar-inverse visible-xs">
@@ -50,6 +50,41 @@
             <input type="submit" value="Submit">
           </form>
           <div class="ocr-result"></div>
+          <div id="ocr-table"></div>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>WordText</th>
+                <th>Height</th>
+                <th>Left</th>
+                <th>Top</th>
+                <th>Width</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>280</td>
+                <td>19</td>
+                <td>188</td>
+                <td>35</td>
+                <td>28</td>
+              </tr>
+              <tr>
+                <td>st</td>
+                <td>16</td>
+                <td>310</td>
+                <td>60</td>
+                <td>16</td>
+              </tr>
+              <tr>
+                <td>New</td>
+                <td>20</td>
+                <td>166</td>
+                <td>52</td>
+                <td>29</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
