--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/dashboard.css" media="screen" charset="utf-8">
   <script src="js/dashboard.js"></script>
 </head>
@@ -90,7 +90,7 @@
       </div>
     </div>
   </div>
-  <script src="http://rawgit.com/bevacqua/dragula/master/dist/dragula.js"></script>
+  <script src="https://rawgit.com/bevacqua/dragula/master/dist/dragula.js"></script>
   <script src="js/dragndrop.js"></script>
   </body>
 </html>
