--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,7 +142,7 @@
   		<!-- <a href="index.html">HOME</a> | <a href="about.html">ABOUT</a> -->
   	</p>
 	</div>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script> -->
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/dropdown.js"></script>
