--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,54 +1,78 @@
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {height:1500px;}
-
-/* Set gray background color and 100% height */
-.sidenav {
-  width:200px;
-  background-color: black;
-  height: 100%;
-}
-
-/* On small screens, set height to 'auto' for the grid */
-@media screen and (max-width: 767px) {
-  .row.content {height: auto;}
-}
-
-body { background-color:#333; }
-#snow{
-	background: none;
-	font-family: Androgyne;
-	background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'), url('http://www.wearewebstars.dk/codepen/img//s2.png'), url('http://www.wearewebstars.dk/codepen/img//s3.png');
-	height: 100%;
-	left: 0;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	z-index:1;
-	-webkit-animation: snow 10s linear infinite;
-	-moz-animation: snow 10s linear infinite;
-	-ms-animation: snow 10s linear infinite;
-	animation: snow 10s linear infinite;
-}
-@keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}
-@-moz-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 400px 1000px, 200px 400px, 100px 300px;}
-}
-@-webkit-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}
-@-ms-keyframes snow {
-  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
-  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
-  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
-}
-
-#div1, #div2
-{float:left; width:100px; height:35px; margin:10px;padding:10px;border:1px solid #aaaaaa;}
+.hidden.menu {
+     display: none;
+   }
+   .masthead.segment {
+     min-height: 700px;
+     padding: 1em 0em;
+   }
+   .masthead .logo.item img {
+     margin-right: 1em;
+   }
+   .masthead .ui.menu .ui.button {
+     margin-left: 0.5em;
+   }
+   .masthead h1.ui.header {
+     margin-top: 3em;
+     margin-bottom: 0em;
+     font-size: 4em;
+     font-weight: normal;
+   }
+   .masthead h2 {
+     font-size: 1.7em;
+     font-weight: normal;
+   }
+   .ui.vertical.stripe {
+     padding: 8em 0em;
+   }
+   .ui.vertical.stripe h3 {
+     font-size: 2em;
+   }
+   .ui.vertical.stripe .button + h3,
+   .ui.vertical.stripe p + h3 {
+     margin-top: 3em;
+   }
+   .ui.vertical.stripe .floated.image {
+     clear: both;
+   }
+   .ui.vertical.stripe p {
+     font-size: 1.33em;
+   }
+   .ui.vertical.stripe .horizontal.divider {
+     margin: 3em 0em;
+   }
+   .quote.stripe.segment {
+     padding: 0em;
+   }
+   .quote.stripe.segment .grid .column {
+     padding-top: 5em;
+     padding-bottom: 5em;
+   }
+   .footer.segment {
+     padding: 5em 0em;
+   }
+   .secondary.pointing.menu .toc.item {
+     display: none;
+   }
+   @media only screen and (max-width: 700px) {
+     .ui.fixed.menu {
+       display: none !important;
+     }
+     .secondary.pointing.menu .item,
+     .secondary.pointing.menu .menu {
+       display: none;
+     }
+     .secondary.pointing.menu .toc.item {
+       display: block;
+     }
+     .masthead.segment {
+       min-height: 350px;
+     }
+     .masthead h1.ui.header {
+       font-size: 2em;
+       margin-top: 1.5em;
+     }
+     .masthead h2 {
+       margin-top: 0.5em;
+       font-size: 1.5em;
+     }
+   }
