--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,96 +1,151 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>FinTacToe</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/dashboard.css" media="screen" charset="utf-8">
-  <script src="js/dashboard.js"></script>
+	<title>FinTacToe</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" class="ui" href="https://oss.maxcdn.com/semantic-ui/2.1.8/semantic.min.css">
+	<link rel="stylesheet" href="css/dashboard.css" media="screen" charset="utf-8">
+	<script src="js/dashboard.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-inverse visible-xs">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">FinTacToe</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Dashboard</a></li>
-          <li><a href="#">OCR</a></li>
-          <li><a href="#">Gender</a></li>
-          <li><a href="#">Geo</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+	<!-- Following Menu -->
+	<div class="ui large top fixed hidden menu">
+	  <div class="ui container">
+			<a class="item">Home</a>
+			<a class="item" href="/ocr">OCR</a>
+			<a class="active item" href="/dashboard">AI Dashboard</a>
+			<a class="item" href="/glass">Glass</a>
+			<a class="item" href="/ideas">Ideas</a>
+	    <div class="right menu">
+	      <div class="item">
+	        <a class="ui inverted button" href="/logout">Log Out</a>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 
-  <div class="container-fluid">
-    <div class="row content">
-      <div class="col-sm-3 sidenav hidden-xs">
-        <h2>FinTacToe</h2>
-        <ul class="nav nav-pills nav-stacked">
-          <li class="active"><a href="#section1">Talk Code</a></li>
-          <li><a href="/ocr">OCR</a></li>
-          <li><a href="/glass">Glass</a></li>
-          <li><a href="#section3">Geo</a></li>
-        </ul><br>
-      </div>
-      <br>
+	<!-- Sidebar Menu -->
+	<div class="ui vertical inverted sidebar menu">
+		<a class="item">Home</a>
+		<a class="item" href="/ocr">OCR</a>
+		<a class="active item" href="/dashboard">AI Dashboard</a>
+		<a class="item" href="/glass">Glass</a>
+		<a class="item" href="/ideas">Ideas</a>
+		<div class="right item">
+			<a class="ui inverted button" href="/logout">Log Out</a>
+		</div>
+	</div>
 
-      <div class="col-sm-9">
-        <div class="well">
-          <h4>Dashboard - Speak</h4>
-        </div>
 
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="well well-lg">
-              <div class="col-xs-8">
-                <input id="input" type="text" class="form-control">
-              </div>
-               <button id="rec" class="btn btn-success">Speak</button>
-               <ol>
-                 <li>bootstrap button</li>
-                 <li>give me my client list</li>
-                 <li>clear test area</li>
-                 <li>green background</li>
-                 <li>red background</li>
-                 <li>secret command</li>
-               </ol>
-            </div>
-            <div class="well">
-              <h4>AI Playground</h4>
-              <div id="testarea"></div>
-            </div>
-            <div class="well">
-              <h5>Response</h5> <textarea id="response" cols="40" rows="20"></textarea>
-              <button id="showjson" type="button" name="button" class="btn btn-warning">Show JSON</button>
-            </div>
-            <div class="well well-lg">
-              <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                <img src="img/car.png" draggable="true" ondragstart="drag(event)" id="drag1" width="88" height="31">
-              </div>
+	<!-- Page Contents -->
+	<div class="pusher">
+	  <div class="ui inverted vertical masthead center aligned segment">
 
-              <div id="div2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="https://rawgit.com/bevacqua/dragula/master/dist/dragula.js"></script>
-  <script src="js/dragndrop.js"></script>
-  </body>
+	    <div class="ui container">
+	      <div class="ui large secondary inverted pointing menu">
+	        <a class="toc item">
+	          <i class="sidebar icon"></i>
+	        </a>
+	        <a class="item">Home</a>
+	        <a class="item" href="/ocr">OCR</a>
+					<a class="active item" href="/dashboard">AI Dashboard</a>
+	        <a class="item" href="/glass">Glass</a>
+	        <a class="item" href="/ideas">Ideas</a>
+	        <div class="right item">
+	          <a class="ui inverted button" href="/logout">Log Out</a>
+	        </div>
+	      </div>
+	    </div>
+
+	    <div class="ui text container">
+	      <h1 class="ui inverted header">
+	        Speak JavaScript.
+	      </h1>
+	      <h2>Click on the Blue Button & Speak.</h2>
+				<div class="ui massive icon input">
+					<input id="input" type="text" placeholder="Talk To Me...">
+					<i class="search icon"></i>
+				</div>
+	      <div class="ui massive primary button" id="rec">Speak <i class="unmute icon"></i></div>
+	    </div>
+	  </div>
+
+	  <div class="ui vertical stripe segment">
+	    <div class="ui middle aligned stackable grid container">
+	      <div class="row">
+	        <div class="eight wide column">
+	          <h3 class="ui header">A.I. Playground</h3>
+							<div class="ui list">
+							  <div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>Bootstrap button</p>
+							    </div>
+							  </div>
+							  <div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>Give me my client list</p>
+							    </div>
+							  </div>
+							  <div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>Green background</p>
+							    </div>
+							  </div>
+							  <div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>Red background</p>
+							    </div>
+							  </div>
+								<div class="item">
+							    <i class="large github middle aligned icon"></i>
+							    <div class="content">
+							      <p>Secret command</p>
+							    </div>
+							  </div>
+							</div>
+	        </div>
+	        <div class="eight wide right floated column">
+						<h1>Result Area</h1>
+	          <div id="testarea" class="ui raised very padded text container segment"></div>
+	        </div>
+	      </div>
+	      <div class="row">
+	        <div class="center aligned column">
+						<h3 class="ui header">Response</h3>
+						<textarea id="response" cols="40" rows="20"></textarea>
+						<br>
+						<div class="ui huge button" id="showjson">Show JSON</div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="ui inverted vertical footer segment">
+	    <div class="ui container">
+	      <div class="ui stackable inverted divided equal height stackable grid">
+	        <div class="three wide column">
+	          <h4 class="ui inverted header">About</h4>
+	          <div class="ui inverted link list">
+	            <a href="#" class="item">About Us</a>
+	            <a href="#" class="item">Contact Us</a>
+	          </div>
+	        </div>
+	        <div class="three wide column">
+	          <h4 class="ui inverted header">Services</h4>
+	          <div class="ui inverted link list">
+	            <a href="#" class="item">Software Pre-Order</a>
+	            <a href="#" class="item">Sharing is Caring</a>
+	          </div>
+	        </div>
+	        <div class="seven wide column">
+	          <h4 class="ui inverted header">Copyright 2016</h4>
+	          <p>FinTacToe.</p>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+</body>
 </html>
