--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 			<a class="item" href="/ideas">Ideas</a>
 	    <div class="right menu">
 	      <div class="item">
-	        <a class="ui inverted button" href="https://github.com/lanbau/fintactoe">Fork Project</a>
+	        <a class="ui inverted button" href="https://github.com/lanbau/fintactoe"><i class="github alternate icon"></i>Fork Project</a>
 	      </div>
 	    </div>
 	  </div>
