--- a/views/glass.ejs
+++ b/views/glass.ejs
@@ -1,48 +1,106 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>Title</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="https://apis.google.com/js/client.js"></script>
-    <script>
-      function makeRequest() {
-        var request = gapi.client.mirror.locations.list({
-          'fields':'items'
-        });
-        request.then(function(response) {
-            console.log(response)
-            fetch('/glass', {
-        		  method: 'post',
-        		  headers: {
-        		    'Accept': 'application/json',
-        		    'Content-Type': 'application/json'
-        		  },
-        		  body: JSON.stringify({
-        		    name: response,
-        		    login: 'hubot',
-        		  })
-        		})
-        })
-      }
-      function auth() {
-        var config = {
-            'client_id': '82458604167-4sdleauovi5h33p4v3m3ud7l01r5jhua.apps.googleusercontent.com',
-            'scope': [
-                'https://www.googleapis.com/auth/userinfo.profile',
-                'https://www.googleapis.com/auth/glass.timeline',
-                'https://www.googleapis.com/auth/glass.location'
-            ]
-        }
-        gapi.auth.authorize(config, function () {
-            console.log('login complete');
-            console.log(gapi.auth.getToken());
-             gapi.client.load('mirror', 'v1', makeRequest)
-        })
-      }
-    </script>
-  </head>
-  <body>
-    <h1>Google Glass</h1>
-    <button onclick="auth();">Get Mirror Location</button>
-  </body>
+<head>
+	<title></title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" class="ui" href="https://oss.maxcdn.com/semantic-ui/2.1.8/semantic.min.css">
+	<link rel="stylesheet" href="css/dashboard.css" media="screen" charset="utf-8">
+  <script src="https://apis.google.com/js/client.js"></script>
+  <script src="js/glass.js"></script>
+</head>
+<body>
+	<!-- Following Menu -->
+	<div class="ui large top fixed hidden menu">
+	  <div class="ui container">
+			<a class="item">Home</a>
+			<a class="item" href="/ocr">OCR</a>
+			<a class="item" href="/dashboard">AI Dashboard</a>
+			<a class="active item" href="/glass">Glass</a>
+			<a class="item" href="/ideas">Ideas</a>
+	    <div class="right menu">
+	      <div class="item">
+	        <a class="ui inverted button" href="https://github.com/lanbau/fintactoe">Fork Project</a>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<!-- Sidebar Menu -->
+	<div class="ui vertical inverted sidebar menu">
+		<a class="item">Home</a>
+		<a class="item" href="/ocr">OCR</a>
+		<a class="item" href="/dashboard">AI Dashboard</a>
+		<a class="active item" href="/glass">Glass</a>
+		<a class="item" href="/ideas">Ideas</a>
+		<div class="right item">
+			<a class="ui inverted button" href="https://github.com/lanbau/fintactoe">Fork Project</a>
+		</div>
+	</div>
+
+
+	<!-- Page Contents -->
+	<div class="pusher">
+	  <div class="ui inverted vertical masthead center aligned segment">
+
+	    <div class="ui container">
+	      <div class="ui large secondary inverted pointing menu">
+	        <a class="toc item">
+	          <i class="sidebar icon"></i>
+	        </a>
+	        <a class="item">Home</a>
+	        <a class="item" href="/ocr">OCR</a>
+					<a class="item" href="/dashboard">AI Dashboard</a>
+	        <a class="active item" href="/glass">Glass</a>
+	        <a class="item" href="/ideas">Ideas</a>
+	        <div class="right item">
+	          <a class="ui inverted button" href="https://github.com/lanbau/fintactoe"><i class="github alternate icon"></i>Fork Project</a>
+	        </div>
+	      </div>
+	    </div>
+
+	    <div class="ui text container">
+	      <h1 class="ui inverted header">
+          Uber Drivers Near Glass.
+	      </h1>
+	      <h2><i class="google icon"></i>Mirror API</h2>
+        <br>
+          <button onclick="auth();" class="ui massive icon button">
+            <i class="car icon"></i> Get Uber Drivers
+          </button>
+	    </div>
+	  </div>
+    <div class="ui vertical stripe segment">
+      <div class="ui text container">
+        <h3 class="ui header">Uber Drivers</h3>
+        <h4 class="ui horizontal header divider">
+          <a href="#">FinTacToe</a>
+        </h4>
+      </div>
+    </div>
+	  <div class="ui inverted vertical footer segment">
+	    <div class="ui container">
+	      <div class="ui stackable inverted divided equal height stackable grid">
+	        <div class="three wide column">
+	          <h4 class="ui inverted header">About</h4>
+	          <div class="ui inverted link list">
+	            <a href="#" class="item">About Us</a>
+	            <a href="#" class="item">Contact Us</a>
+	          </div>
+	        </div>
+	        <div class="three wide column">
+	          <h4 class="ui inverted header">Services</h4>
+	          <div class="ui inverted link list">
+	            <a href="#" class="item">Software Pre-Order</a>
+	            <a href="#" class="item">Sharing is Caring</a>
+	          </div>
+	        </div>
+	        <div class="seven wide column">
+	          <h4 class="ui inverted header">Copyright 2016</h4>
+	          <p>FinTacToe.</p>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+  <script src="js/ocr.js"></script>
+</body>
 </html>
