--- a/views/ocr.ejs
+++ b/views/ocr.ejs
@@ -1,93 +1,146 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>Optical Character Recognition</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="css/ocr.css">
+	<title>OCR</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" class="ui" href="https://oss.maxcdn.com/semantic-ui/2.1.8/semantic.min.css">
+	<link rel="stylesheet" href="css/dashboard.css" media="screen" charset="utf-8">
 </head>
-  <body>
-    <nav class="navbar navbar-inverse visible-xs">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Logo</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Talk Code</a></li>
-            <li class="active"><a href="#">OCR</a></li>
-            <li><a href="#">Gender</a></li>
-            <li><a href="#">Geo</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<body>
+	<!-- Following Menu -->
+	<div class="ui large top fixed hidden menu">
+	  <div class="ui container">
+			<a class="item">Home</a>
+			<a class="active item" href="/ocr">OCR</a>
+			<a class="item" href="/dashboard">AI Dashboard</a>
+			<a class="item" href="/glass">Glass</a>
+			<a class="item" href="/ideas">Ideas</a>
+	    <div class="right menu">
+	      <div class="item">
+	        <a class="ui inverted button" href="https://github.com/lanbau/fintactoe">Fork Project</a>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 
-    <div class="container-fluid">
-      <div class="row content">
-        <div class="col-sm-3 sidenav hidden-xs">
-          <h2>Logo</h2>
-          <ul class="nav nav-pills nav-stacked">
-            <li><a href="/dashboard">Talk Code</a></li>
-            <li class="active"><a href="/ocr">OCR</a></li>
-            <li><a href="/glass">Glass</a></li>
-            <li><a href="#section3">Geo</a></li>
-          </ul><br>
-        </div>
+	<!-- Sidebar Menu -->
+	<div class="ui vertical inverted sidebar menu">
+		<a class="item">Home</a>
+		<a class="active item" href="/ocr">OCR</a>
+		<a class="item" href="/dashboard">AI Dashboard</a>
+		<a class="item" href="/glass">Glass</a>
+		<a class="item" href="/ideas">Ideas</a>
+		<div class="right item">
+			<a class="ui inverted button" href="https://github.com/lanbau/fintactoe">Fork Project</a>
+		</div>
+	</div>
+
+
+	<!-- Page Contents -->
+	<div class="pusher">
+	  <div class="ui inverted vertical masthead center aligned segment">
+
+	    <div class="ui container">
+	      <div class="ui large secondary inverted pointing menu">
+	        <a class="toc item">
+	          <i class="sidebar icon"></i>
+	        </a>
+	        <a class="item">Home</a>
+	        <a class="active item" href="/ocr">OCR</a>
+					<a class="item" href="/dashboard">AI Dashboard</a>
+	        <a class="item" href="/glass">Glass</a>
+	        <a class="item" href="/ideas">Ideas</a>
+	        <div class="right item">
+	          <a class="ui inverted button" href="https://github.com/lanbau/fintactoe">Fork Project</a>
+	        </div>
+	      </div>
+	    </div>
+
+	    <div class="ui text container">
+	      <h1 class="ui inverted header">
+	        Optical Character Recognition.
+	      </h1>
+	      <h2>Image To Text</h2>
         <br>
-        <div class="col-sm-9">
+        <div class="ui left action input">
           <form id="data">
-            <input type="hidden" name="id" value="123" readonly="readonly">
-            Profile Image: <input name="profileImg[]" type="file" /><br />
-            <input type="submit" value="Submit">
+            <input name="profileImg[]" type="file" />
+            <input class="ui large inverted orange button" type="submit" value="Submit">
           </form>
-          <div class="ocr-result"></div>
-          <div id="ocr-table"></div>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>WordText</th>
-                <th>Height</th>
-                <th>Left</th>
-                <th>Top</th>
-                <th>Width</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>280</td>
-                <td>19</td>
-                <td>188</td>
-                <td>35</td>
-                <td>28</td>
-              </tr>
-              <tr>
-                <td>st</td>
-                <td>16</td>
-                <td>310</td>
-                <td>60</td>
-                <td>16</td>
-              </tr>
-              <tr>
-                <td>New</td>
-                <td>20</td>
-                <td>166</td>
-                <td>52</td>
-                <td>29</td>
-              </tr>
-            </tbody>
-          </table>
         </div>
+
+
+	    </div>
+	  </div>
+    <div class="ui vertical stripe segment">
+      <div class="ui text container">
+        <h3 class="ui header">OCR Results</h3>
+        <p><div class="ocr-result"></div></p>
+        <div id="ocr-table"></div>
+        <h4>Example Table</h4>
+        <table class="ui celled table">
+          <thead>
+            <tr>
+              <th>WordText</th>
+              <th>Height</th>
+              <th>Left</th>
+              <th>Top</th>
+              <th>Width</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>280</td>
+              <td>19</td>
+              <td>188</td>
+              <td>35</td>
+              <td>28</td>
+            </tr>
+            <tr>
+              <td>st</td>
+              <td>16</td>
+              <td>310</td>
+              <td>60</td>
+              <td>16</td>
+            </tr>
+            <tr>
+              <td>New</td>
+              <td>20</td>
+              <td>166</td>
+              <td>52</td>
+              <td>29</td>
+            </tr>
+          </tbody>
+        </table>
+        <h4 class="ui horizontal header divider">
+          <a href="#">FinTacToe</a>
+        </h4>
       </div>
     </div>
-    <script src="js/ocr.js"></script>
-  </body>
+	  <div class="ui inverted vertical footer segment">
+	    <div class="ui container">
+	      <div class="ui stackable inverted divided equal height stackable grid">
+	        <div class="three wide column">
+	          <h4 class="ui inverted header">About</h4>
+	          <div class="ui inverted link list">
+	            <a href="#" class="item">About Us</a>
+	            <a href="#" class="item">Contact Us</a>
+	          </div>
+	        </div>
+	        <div class="three wide column">
+	          <h4 class="ui inverted header">Services</h4>
+	          <div class="ui inverted link list">
+	            <a href="#" class="item">Software Pre-Order</a>
+	            <a href="#" class="item">Sharing is Caring</a>
+	          </div>
+	        </div>
+	        <div class="seven wide column">
+	          <h4 class="ui inverted header">Copyright 2016</h4>
+	          <p>FinTacToe.</p>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+  <script src="js/ocr.js"></script>
+</body>
 </html>
