update glass page

--- a/views/glass.ejs
+++ b/views/glass.ejs
@@ -70,7 +70,11 @@
 	  </div>
     <div class="ui vertical stripe segment">
       <div class="ui text container">
-        <h3 class="ui header">Uber Drivers</h3>
+				<h3 class="ui header">Uber Drivers List</h3>
+				<table class="ui celled table">
+					<thead id="thead"></thead>
+					<tbody id="tbody"></tbody>
+				</table>
         <h4 class="ui horizontal header divider">
           <a href="#">FinTacToe</a>
         </h4>
