--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,6 +4,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" class="ui" href="https://oss.maxcdn.com/semantic-ui/2.1.8/semantic.min.css">
 	<link rel="stylesheet" href="css/dashboard.css" media="screen" charset="utf-8">
+	<link rel="stylesheet" href="css/snow.css" media="screen" charset="utf-8">
 	<script src="js/dashboard.js"></script>
 </head>
 <body>
